# gpt-agent

./: .env.sample  .gitignore  READMD.md  gpt_basic.py
chap08/: .gitignore  README.md  pyproject.toml
chap08/src/myapp/: langchain_chatbot.ipynb  main.py
chap08/src/sec01/: langchain_chatbot.ipynb  langchain_message_history.ipynb  langchain_multi_turn.py
chap08/src/sec02/: lcel.ipynb
chap08/src/sec03/: langchain_tool.ipynb  pydantic.ipynb
chap08/src/sec04/: langchain_tool_stream.ipynb
chap08/src/sec05/: langchain_simple_chat_streamlit.py  langchain_simple_chat_streamlit_0.py
chap09/: .gitignore  README.md  pyproject.toml
chap09/C:/github/gpt_agent_2025_easyspub/chap09/chroma_store/: chroma.sqlite3
chap09/src/chroma_store/: chroma.sqlite3
chap09/src/sec02/: rag_practice.ipynb
chap09/src/sec03/: rag.py  rag_0.py  rag_1.py  retriever.py
