[project]
name = "chap09"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "load-dotenv>=0.1.0",
    "pymupdf>=1.26.3",
    "pypdf>=6.0.0",
]
